--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+marshmallow==3.2.2
 mccabe==0.6.1
 psycopg2-binary==2.8.4
 pylint==2.4.3
